welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:1: error: illegal start of simple expression
if (estSurBiscuit());
                    ^Balin:4: error: illegal start of simple expression
		if (!estSurBiscuit()); {avance()};
                                     ^Balin:5: error: ';' expected but 'else' found.
		else {recule(); poseBiscuit(); recule();}
                ^Balin:7: error: ';' expected but 'else' found.
else { while (!estSurBiscuit());
^